# quickstart-rust-actix-web

./: Cargo.toml
register_user/: Cargo.toml
register_user/domain/: Cargo.toml
register_user/domain/src/user/: mod.rs
register_user/domain/src/user/model/: mod.rs  user.rs
register_user/domain/src/user/ports/primary/: create_user_port.rs  mod.rs
register_user/domain/src/user/use_case/: create_user_use_case.rs  mod.rs
register_user/primary/rest_server/: Cargo.toml
register_user/primary/rest_server/src/user/controller/: mod.rs  user_controller.rs
register_user/rest_server/: Cargo.toml
register_user/rest_server/src/user/controller/: mod.rs  user_controller.rs
register_user/rest_server/src/user/dto/: mod.rs  user_dto.rs
register_user/src/: lib.rs
src/: init_server.rs  main.rs
