[package]
name = "rest_server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
actix-web = { version = "4.9.0" }
domain = { version = "0.1.0", path = "../../domain" }
serde = { version = "1.0.209", features = ["derive"] }
